import "google/protobuf/descriptor.proto";

message PHPFileOptions {
  optional bool   multiple_files = 1 [default = true];
  optional bool   skip_unknown = 2;
  optional string base_class   = 3 [default = ""];
  enum Style
  {
     PSR4 = 1;
     PEAR = 2;
  }
  optional Style style = 4 [default = PSR4];
  optional string namespace = 8001;
  optional string include_path = 8002;
}

message PHPMessageOptions {
  optional bool use_single_property = 2 [default = false];
  optional string single_property_name = 3 [default = "_properties"];
  optional bool use_wakeup_and_sleep = 4 [default = false];
  optional string base_class = 8001 [default = "\\\\ProtocolBuffers\\\\Message"];
}

extend google.protobuf.FileOptions {
  optional PHPFileOptions php = 1004;
}

extend google.protobuf.MessageOptions {
  optional PHPMessageOptions php_option = 1004;
}
